Dummy_Package_for_scratch_org/main/default/objects/Org__c/Org__c.object-meta.xml
<CustomObject>
    <description>Org authenticated via OAuth that you will need in order to schedule a deployment, run or schedule a Git Snapshot, run or schedule Apex test for an Org and to add more Org credentials in the same Salesforce server (pod).</description>
    <label>Credential</label>
    <nameField>
        <label>Credential Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Credentials</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>