Dummy_Package_for_scratch_org/main/default/objects/Org__c/fields/Custom_Domain__c.field-meta.xml
<CustomField>
    <fullName>Custom_Domain__c</fullName>
    <inlineHelpText>Eg: https://company.my.salesforce.com</inlineHelpText>
    <label>Custom Domain</label>
    <type>Url</type>
</CustomField>