Dummy_Package_for_scratch_org/main/default/objects/Org__c/fields/Default_Credential__c.field-meta.xml
<CustomField>
    <fullName>Default_Credential__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If selected, this will be the preferred credential for Promotion deployments</inlineHelpText>
    <label>Default Credential</label>
    <type>Checkbox</type>
</CustomField>