Dummy_Package_for_scratch_org/main/default/objects/Org__c/fields/Default_Scratch_Org_Definition__c.field-meta.xml
<CustomField>
    <fullName>Default_Scratch_Org_Definition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Will be used for Review app creation out of promotions. Otherwise every scratch org may be created by their own scratch org definition either with a template or without.</inlineHelpText>
    <label>Default Scratch Org Definition</label>
    <referenceTo>Scratch_Org_Definition__c</referenceTo>
    <relationshipLabel>Credentials</relationshipLabel>
    <relationshipName>Org_Credentials</relationshipName>
    <type>Lookup</type>
</CustomField>