Dummy_Package_for_scratch_org/main/default/objects/Org__c/fields/Developer_Hub_Org__c.field-meta.xml
<CustomField>
    <fullName>Developer_Hub_Org__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Developer Hub Credential</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Org__c.is_Developer_Hub_Org__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Org__c</referenceTo>
    <relationshipLabel>Credentials</relationshipLabel>
    <relationshipName>Org_Credentials</relationshipName>
    <type>Lookup</type>
</CustomField>