Dummy_Package_for_scratch_org/main/default/objects/Org__c/fields/Disable_Validation__c.field-meta.xml
<CustomField>
    <fullName>Disable_Validation__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Checking this checkbox will not validate the credentials when the record is saved or viewed.</inlineHelpText>
    <label>Disable Validation</label>
    <type>Checkbox</type>
</CustomField>