Dummy_Package_for_scratch_org/main/default/objects/Org__c/fields/Environment__c.field-meta.xml
<CustomField>
    <fullName>Environment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Environment records are created automatically when Credentials are authenticated. The Environment may have multiple Credentials which correspond to different users of the same Environment.</description>
    <inlineHelpText>Environment records are created automatically when Credentials are authenticated. The Environment may have multiple Credentials which correspond to different users of the same Environment.</inlineHelpText>
    <label>Environment</label>
    <referenceTo>Environment__c</referenceTo>
    <relationshipLabel>Credentials</relationshipLabel>
    <relationshipName>Org_Credentials</relationshipName>
    <type>Lookup</type>
</CustomField>