Dummy_Package_for_scratch_org/main/default/objects/Org__c/fields/Error__c.field-meta.xml
<CustomField>
    <fullName>Error__c</fullName>
    <label>Error</label>
    <length>255</length>
    <type>Text</type>
</CustomField>