Dummy_Package_for_scratch_org/main/default/objects/Org__c/fields/is_Developer_Hub_Org__c.field-meta.xml
<CustomField>
    <fullName>is_Developer_Hub_Org__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Developer Hub Credential</label>
    <type>Checkbox</type>
</CustomField>