Dummy_Package_for_scratch_org/main/default/objects/Org__c/fields/Last_Apex_Tests_Datetime__c.field-meta.xml
<CustomField>
    <fullName>Last_Apex_Tests_Datetime__c</fullName>
    <label>Last Apex Tests Datetime</label>
    <type>DateTime</type>
</CustomField>