Dummy_Package_for_scratch_org/main/default/objects/Org__c/fields/Last_Git_Backup_Datetime__c.field-meta.xml
<CustomField>
    <fullName>Last_Git_Backup_Datetime__c</fullName>
    <label>Last Git Backup Datetime</label>
    <type>DateTime</type>
</CustomField>