Dummy_Package_for_scratch_org/main/default/objects/Org__c/fields/Last_Git_Backup_Status__c.field-meta.xml
<CustomField>
    <fullName>Last_Git_Backup_Status__c</fullName>
    <label>Last Git Backup Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>OK</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>