Dummy_Package_for_scratch_org/main/default/objects/Org__c/fields/Metadata_Types__c.field-meta.xml
<CustomField>
    <fullName>Metadata_Types__c</fullName>
    <inlineHelpText>Empty means all types. Select one or more types to limit the backup only to selected items.</inlineHelpText>
    <label>Metadata Types</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>