Dummy_Package_for_scratch_org/main/default/objects/Org__c/fields/Minimum_Apex_Test_Coverage__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Apex_Test_Coverage__c</fullName>
    <description>Minimum code coverage required for deploying changes from this Environment.</description>
    <formula>Environment__r.Minimum_Apex_Test_Coverage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Minimum code coverage required for deploying changes from this Environment.</inlineHelpText>
    <label>Minimum Apex Test Coverage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>