Dummy_Package_for_scratch_org/main/default/objects/Org__c/fields/Oauth_Signature__c.field-meta.xml
<CustomField>
    <fullName>Oauth_Signature__c</fullName>
    <description>This value is automatically set and updated by Copado.</description>
    <inlineHelpText>This value is automatically set and updated by Copado.</inlineHelpText>
    <label>Oauth Signature</label>
    <length>255</length>
    <type>Text</type>
</CustomField>