Dummy_Package_for_scratch_org/main/default/objects/Org__c/fields/Org_Type__c.field-meta.xml
<CustomField>
    <fullName>Org_Type__c</fullName>
    <label>Org Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Production/Developer</fullName>
                <default>true</default>
                <label>Production/Developer</label>
            </value>
            <value>
                <fullName>Sandbox</fullName>
            </value>
            <value>
                <fullName>Scratch Org - Test only</fullName>
            </value>
            <value>
                <fullName>Scratch Org</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>