Dummy_Package_for_scratch_org/main/default/objects/Org__c/fields/Platform__c.field-meta.xml
<CustomField>
    <fullName>Platform__c</fullName>
    <formula>TEXT(Environment__r.Platform__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Platform</label>
    <type>Text</type>
</CustomField>