Dummy_Package_for_scratch_org/main/default/objects/Org__c/fields/Profile_Name__c.field-meta.xml
<CustomField>
    <fullName>Profile_Name__c</fullName>
    <label>Profile Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>