Dummy_Package_for_scratch_org/main/default/objects/Org__c/fields/Scratch_Org_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Scratch_Org_Expiration_Date__c</fullName>
    <label>Scratch Org Expiration Date</label>
    <type>DateTime</type>
</CustomField>