Dummy_Package_for_scratch_org/main/default/objects/Org__c/fields/SFDC_Org_ID__c.field-meta.xml
<CustomField>
    <fullName>SFDC_Org_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Organization Id for the Environment.</description>
    <externalId>true</externalId>
    <inlineHelpText>Organization Id for the Environment.</inlineHelpText>
    <label>SFDC Org ID</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>