Dummy_Package_for_scratch_org/main/default/objects/Org__c/fields/Token__c.field-meta.xml
<CustomField>
    <fullName>Token__c</fullName>
    <inlineHelpText>A security token is an automatically generated key that you must use when connecting via the API.</inlineHelpText>
    <label>Security Token</label>
    <length>100</length>
    <type>Text</type>
</CustomField>