Dummy_Package_for_scratch_org/main/default/objects/Org__c/fields/Type_Icon__c.field-meta.xml
<CustomField>
    <fullName>Type_Icon__c</fullName>
    <formula>IF( 
OR(ISPICKVAL(Org_Type__c, &apos;Scratch Org&apos;),ISPICKVAL(Org_Type__c, &apos;Scratch Org - Test Only&apos;)), 
IMAGE(&apos;/resource/1516617624000/&apos;+IF($Setup.Settings__c.Namespace__c!=&apos;none&apos;,&apos;copado__&apos;, &apos;&apos;)+&apos;DXType?isdtp=p1&apos;, &apos;Salesforce DX Scratch Org&apos;, 40, 40),
IF( 
AND(ISPICKVAL(Org_Type__c, &apos;Production/Developer&apos;), is_Developer_Hub_Org__c == FALSE), 
IMAGE(&apos;/resource/1516617528000/&apos;+IF($Setup.Settings__c.Namespace__c!=&apos;none&apos;,&apos;copado__&apos;, &apos;&apos;)+&apos;sforce?isdtp=p1&apos;, &apos;Production/Developer&apos;, 40, 50),
IF( 
ISPICKVAL(Org_Type__c, &apos;Sandbox&apos;), 
IMAGE(&apos;/resource/1516617549000/&apos;+IF($Setup.Settings__c.Namespace__c!=&apos;none&apos;,&apos;copado__&apos;, &apos;&apos;)+&apos;sandbox?isdtp=p1&apos;, &apos;Sandbox&apos;, 40, 40),
IF( 
AND(ISPICKVAL(Org_Type__c, &apos;Production/Developer&apos;), is_Developer_Hub_Org__c == TRUE), 
IMAGE(&apos;/resource/1516617568000/&apos;+IF($Setup.Settings__c.Namespace__c!=&apos;none&apos;,&apos;copado__&apos;, &apos;&apos;)+&apos;Hub?isdtp=p1&apos;, &apos;DX Developer Hub&apos;, 40, 40),
&apos;Unknown Org Type&apos; 
) 

) 
) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Type Icon</label>
    <type>Text</type>
</CustomField>