Dummy_Package_for_scratch_org/main/default/objects/Org__c/fields/Validated_Date__c.field-meta.xml
<CustomField>
    <fullName>Validated_Date__c</fullName>
    <description>Latest OAuth authentication validation date.</description>
    <inlineHelpText>Latest OAuth authentication validation date.</inlineHelpText>
    <label>Validated Date</label>
    <type>DateTime</type>
</CustomField>