Dummy_Package_for_scratch_org/main/default/objects/Org__c/fields/Validated_Status__c.field-meta.xml
<CustomField>
    <fullName>Validated_Status__c</fullName>
    <formula>IF(ISBLANK(Validated_Date__c),
&quot;Error&quot; ,
 IF( DATEVALUE(Validated_Date__c) == TODAY(), 
    &quot;OK&quot;,&quot;None&quot;) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Validated Status</label>
    <type>Text</type>
</CustomField>