Dummy_Package_for_scratch_org/main/default/objects/Org__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Org_Type__c</columns>
    <columns>Username__c</columns>
    <columns>SFDC_Org_ID__c</columns>
    <columns>Test_Frequency__c</columns>
    <columns>Validated_Date__c</columns>
    <columns>Validated_Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Last_Git_Backup_Status__c</columns>
    <columns>Last_Apex_Tests_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>